kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linuxbox-centos9
spec:
  selector:
    app: linuxbox-centos9
  ports:
  - name: ssh
    port: 22
    targetPort: 22
  - name: http
    port: 8080
    targetPort: 8080
